--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Hii Nanna</h1>
+	<nav>
+		<a href="/actors/" id="nav-actor">Actor</a>
+		<a href="/qotes/" id="nav-quote">Quotes</a>
+	</nav>
+	<summary>
+		This movie is about the father and daughter relationship
+	</summary>
+	<section id="actor">
+		Actor: Nani
+		Actress: Mrunal
+	</section>
+	<section id="quote">
+		Father is an emotion
+	</section>
+	<aside>
+		IMDb rate:4.5/5
+		release date: 14-01-2024
+	</aside>
+	<footer>
+		Produced by:Shouryuv
+	</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
