--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Hii Nanna</h1>
+	<header>Hii Nanna</header>
 	<nav>
-		<a href="/actor/" id="nav-actor">Actors</a>
-		<a href="/quote/" id="nav-quote">Quotes</a>
+		<a href="#actor" id="nav-actor">Actors</a>
+		<a href="#quote" id="nav-quote">Quotes</a>
 	</nav>
 	<summary>
 		This movie is about the father and daughter relationship
